--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".AddAccount"></activity>
+        <activity android:name=".Home_Board.AddAccount"></activity>
         <activity android:name=".CalendarKotlin.CalendarActivity"></activity>
         <activity android:name=".CalendarKotlin.ScheduleEditActivity"></activity>
-        <activity android:name=".dialogActivity"/>
+        <activity android:name=".Home_Board.dialogActivity"/>
 <!--        <receiver-->
 <!--            android:name=".AppWidgetProvider"-->
 <!--            android:exported="false">-->
@@ -41,7 +41,7 @@
 <!--                android:resource="@xml/appwidget_info" />-->
 <!--        </receiver>-->
 
-        <receiver android:name=".AlarmReceiver"
+        <receiver android:name=".Location.AlarmReceiver"
             android:exported="false">
         </receiver>
 
@@ -54,7 +54,7 @@
         <activity android:name=".Home_Board.BoardContentActivity"/>
         <activity android:name=".Notification.Notification" />
         <activity android:name=".FamilySet.MainActivity" />
-        <activity android:name=".AlbumActivity"></activity>
+        <activity android:name=".Home_Board.AlbumActivity"></activity>
         <activity android:name=".FamilySet.FamilySettingActivity" />
         <activity android:name=".LoginRegister.SignUpActivity" />
         <activity android:name=".LoginRegister.LoginActivity">
@@ -64,16 +64,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LocationActivity"></activity>
+        <activity android:name=".Location.LocationActivity"></activity>
         <activity android:name=".Mypage.MypageEditActivity" />
         <activity android:name=".Mypage.MypageActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".Home_Board.HomeActivity" />
         <activity
             android:name=".Home_Board.BoardActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".SerachMap.SearchMap" />
-        <activity android:name=".StartActivity" />
-        <activity android:name=".customActivity"></activity>
+        <activity android:name=".FamilySet.StartActivity" />
+        <activity android:name=".Home_Board.customActivity"></activity>
         <activity android:name=".FamilySet.DynamicLinkActivity">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
